[package]
name = "nunix"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
snix-eval = { git = "https://github.com/Rucadi/snix", branch = "nushell", package = "snix-eval" }
serde_json = "1.0.140"
tempfile = "3.13.0"
clap = { version = "4.5.37", features = ["derive"] }
colored_json = "5.0.0"
pathdiff = "0.2.3"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.13.0"
